# manyrows-python

./: README.md  pyproject.toml
src/manyrows/: __init__.py  auth.py  bff.py  client.py  secrets.py
tests/: test_auth.py  test_bff.py  test_bff_async.py  test_secrets.py
